Add minigame dialogue

--- a/config/begging/locations/BRIDGE.toml
+++ b/config/begging/locations/BRIDGE.toml
@@ -107,7 +107,7 @@ emoji = "<:PP_BEG:879382346812489809>"  # (string) The emoji that will be used t
         # All quotes for the fill-in-the-blank mini-game.
         [quotes.minigames.fill_in_the_blank]
 
-            approacher = "gameshow host"  # (string) The person approaching the user in this mini-game.
-            context = "A gameshow host approaches you with a question"  # The context of the mini-game.
-            success = "Good job! You win!"  # (string) The success message for the user. E.g. "gameshow host: 'Good job! You win!'"
-            fail = "Sorry, you lose!"  # (string) The failure message for the user. E.g. "gameshow host: 'Sorry, you lose!'"
+            approacher = "local crackhead"  # (string) The person approaching the user in this mini-game.
+            context = "Some random crackhead points at you and starts yelling."  # The context of the mini-game.
+            success = "io mtae yoju got some crystal dfor me eh? alrigbht cheers hhers {}"  # (string) The success message for the user. E.g. "gameshow host: 'Good job! You win!'"
+            fail = "who are you?? gmet ouet of my hsuoe tyou fucking toryy"  # (string) The failure message for the user. E.g. "gameshow host: 'Sorry, you lose!'"
