--- a/config/begging/locations/example/EXAMPLE_LOCATION.example.toml
+++ b/config/begging/locations/example/EXAMPLE_LOCATION.example.toml
@@ -41,8 +41,18 @@ emoji = "🥰"  # (string) The emoji that will be used to represent the location
             success = "Good job! You win!"  # (string) The success message for the user. E.g. "gameshow host: 'Good job! You win!'"
             fail = "Sorry, you lose!"  # (string) The failure message for the user. E.g. "gameshow host: 'Sorry, you lose!'"
 
-        # All quotes for the scramble mini-game.
         [quotes.minigames.scramble]
 
-            approacher = "scrambled text" # (string) The thing that's scrambled. E.g. "scrambled text"
-            context = "There's been a missprint in the news paper." # (string) The context of the mini-game. E.g. "There's been a missprint in the news paper."
+            approacher = "scrambled text"  # (string) The thing containing the scrambled text.
+            context = "There's been a missprint in the news paper."  # (string) The context of the mini-game.
+
+        # All quotes for the scramble mini-game.
+        [quotes.minigames.retype]
+
+            context = "Oh look, free stuff!"  # (string) The context of the mini-game.
+            sentences = [  # (array) The sentences to be retyped.
+                "Oh sick, free items",
+                "I'm a big fan of free stuff",
+                "Did someone say free?",
+                "Please give me free stuff, I'm begging you"
+            ]
