--- a/config/begging/quotes.toml
+++ b/config/begging/quotes.toml
@@ -1,39 +1,39 @@
 # (array) The default success quotes. {} is a placeholder for whatever reward the user receives.
 success = [
-    "aight kuh here's {}",  # how a user might see this: "Sure, here's 4 **Rotten Wood**s. Have a good day!"
-    "take {}, and eat it, you little dumpster boy",
-    "aight buddy here's {}",
-    "ugh beggars are so annoying. here's {}, now stop wasting my time",
-    "eh, you can have {}, I don't need that stuff anyways",
+    "Aight kuh here's {}",  # how a user might see this: "Sure, here's 4 **Rotten Wood**s. Have a good day!"
+    "Take {}, and eat it, you little dumpster boy",
+    "OK buddy here's {}",
+    "Ugh beggars are so annoying. Here's {}, now stop wasting my time",
+    "Eh, you can have {}, I don't need that stuff anyways",
 ]
 
 # (array) The default failure quotes for the location.
 fail = [
-    "nah 🅱️",
-    "gtfo beggar",
-    "nah I'm broke",
-    "ew dont talk to me",
+    "Nah 🅱️",
+    "Gtfo beggar",
+    "Nah I'm broke",
+    "Ew dont talk to me",
     "I'm not giving you anything, you look weird",
-    "lmao poor",
-    "eeeewwww don't touch me I'm too good for you",
-    "ew poor",
-    "don't touch my pp",
-    "my wife has a bigger pp than you",
-    "broke ass bitch",
-    "cringe poor",
-    "beg harder",
-    "poor people make me scared",
-    "dont touch me poor person",
-    "get a job",
-    "im offended",
-    "no u",
-    "i dont speak poor",
-    "you should take a shower",
-    "i love my wife... i love my wife... i love my wife..",
-    "drink some water",
-    "begone beggar",
+    "Lmao poor",
+    "Eeeewwww don't touch me I'm too good for you",
+    "Ew poor",
+    "Don't touch my pp",
+    "My wife has a bigger pp than you",
+    "Broke ass bitch",
+    "Cringe poor",
+    "Beg harder",
+    "Poor people make me scared",
+    "Don't touch me poor person",
+    "Get a job",
+    "I'm offended",
+    "No u",
+    "I dont speak poor",
+    "You should take a shower",
+    "I love my wife... I love my wife... I love my wife..",
+    "Drink some water",
+    "Begone beggar",
     "No.",
-    "no wtf?",
-    "try being a little 'cooler' next time",
+    "No wtf?",
+    "Try being a little 'cooler' next time",
     "Lmao pussy-nerd beg harder next time",
 ]
